src/k8s/03-nginx-ingress/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - spgda.fl.com.ar
    secretName: tls-secrets
  rules:
  - host: spgda.fl.com.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 80
